Closed Bug 1441029 Opened 7 years ago Closed 7 years ago

[FIX] Assertion failure: type != name, at dom/base/Element.cpp:4440

Categories

(Core :: DOM: Core & HTML, defect, P3)

59 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: bc, Assigned: smaug)

References

()

Details

Attachments

(2 files)

Attached file Log
1. https://search.aviasales.ru/MOW2203OVB1 2. Assertion failure: type != name, at /builds/worker/workspace/build/src/dom/base/Element.cpp:4440 #01: nsContentUtils::NewXULOrHTMLElement(mozilla::dom::Element**, mozilla::dom::NodeInfo*, mozilla::dom::FromParser, nsAtom*, mozilla::dom::CustomElementDefinition*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so) #02: NS_NewHTMLElement(mozilla::dom::Element**, already_AddRefed<mozilla::dom::NodeInfo>&&, mozilla::dom::FromParser, nsAtom*, mozilla::dom::CustomElementDefinition*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so) #03: nsHtml5TreeOperation::CreateHTMLElement(nsAtom*, nsHtml5HtmlAttributes*, mozilla::dom::FromParser, nsNodeInfoManager*, nsHtml5DocumentBuilder*, nsGenericHTMLElement* (*)(already_AddRefed<mozilla::dom::NodeInfo>&&, mozilla::dom::FromParser)) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so) #04: nsHtml5TreeOperation::Perform(nsHtml5TreeOpExecutor*, nsIContent**, bool*, bool*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so) #05: nsHtml5TreeOpExecutor::RunFlushLoop() (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so) Nightly/60 Linux. Originally seen in Nightly/59 but not reproducible on Beta/59.
Bobby, seems this is your code.
Flags: needinfo?(bobbyholley)
(In reply to Anne (:annevk) from comment #1) > Bobby, seems this is your code. Hm, what makes you say that? This assertion is in Element::SetCustomElementData, yeah? I've never touched anything CE-related.
Flags: needinfo?(bobbyholley)
My bad, went by line number. :/ This was introduced in bug 1419662.
Priority: -- → P3
data:text/html,<div is=div>
No need to try to use invalid is attribute, since there wouldn't be a custom element for such name in the registry anyhow.
Assignee: nobody → bugs
Attachment #8981247 - Flags: review?(mrbkap)
Summary: Assertion failure: type != name, at dom/base/Element.cpp:4440 → [FIX] Assertion failure: type != name, at dom/base/Element.cpp:4440
Attachment #8981247 - Flags: review?(mrbkap) → review+
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/e95948e4ac6b give up early on invalid 'is attribute values, r=mrbkap
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: