Bug 1441029, give up early on invalid 'is attribute values, r=mrbkap

--HG--
extra : rebase_source : 5e63b39f69e2acafb67fbc8d8dda2fee155db61f